--- a/signup.css
+++ b/signup.css
@@ -80,7 +80,7 @@ main {
 }
 
 .form_box{
-    height: 99%;
+    height: fit-content;
     width: 70%;
     background-color: rgb(199, 199, 199);
     border-radius: 30px;
@@ -89,8 +89,9 @@ main {
     /* justify-content: center; */
     color: black;
     flex-direction: column;
-    gap: .8vw;
+    gap: .4vw;
     padding: 2vw;
+    transition: all 0.2s ease-in-out;
 }
 
 .form_box p{
@@ -98,7 +99,7 @@ main {
 }
 
 .fullNameWrapper{
-    margin-top: 2vw;
+    /* margin-top: 2vw; */
     height: fit-content;
     width: 100%;
 }
@@ -159,4 +160,20 @@ main {
     padding: 1vw 15vw;
     background-color: grey;
     border-radius: 30px;
+    margin-top: .5vw;
+}
+
+.signUpSubmitBtn:disabled {
+    background-color: grey;
+    cursor: not-allowed;
+}
+
+.error-message {
+    color: red;
+    font-size: 0.8em;
+    /* margin-top: 5px; */
+}
+
+.error {
+    border: 2px solid red;
 }
