--- a/signup.css
+++ b/signup.css
@@ -104,7 +104,7 @@ main {
     width: 100%;
 }
 
-.phoneNumberWrapper , .passwordWrapper , .genderWrapper , .ageWrapper{
+.phoneNumberWrapper , .passwordWrapper , .genderWrapper , .ageWrapper , .userIdWrapper{
     height: fit-content;
     width: 100%;
 }
@@ -154,7 +154,7 @@ main {
   cursor: pointer;
 }
 
-.signUpSubmitBtn{
+.signUpSubmitBtn , .logInSubmitBtn , .forgotPassSubmitBtn{
     border: none;
     color: black;
     padding: 1vw 15vw;
@@ -165,7 +165,7 @@ main {
     display: inline-block
 }
 
-.signUpSubmitBtn.disabled {
+.signUpSubmitBtn.disabled , .logInSubmitBtn.disabled{
     cursor: not-allowed;
     pointer-events: none; /* Prevents click events */
     background-color: grey;
