--- a/savings.css
+++ b/savings.css
@@ -195,6 +195,10 @@ main {
 .left{
     /* background-color: rebeccapurple; */
     position: relative;
+    padding: 1vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .addButton{
@@ -252,4 +256,120 @@ main {
 
     transform: scale(1) translateY(0);
     /* transition: all 0.2s ease-in-out; */
+}
+
+.form_box{
+    height: fit-content;
+    width: 70%;
+    background-color: rgb(199, 199, 199);
+    border-radius: 30px;
+    display: flex;
+    align-items: center;
+    /* justify-content: center; */
+    color: black;
+    flex-direction: column;
+    gap: .4vw;
+    padding: 2vw;
+    transition: all 0.2s ease-in-out;
+}
+
+.form_box p{
+    font-size: .8vw;
+}
+
+.fullNameWrapper{
+    /* margin-top: 2vw; */
+    height: fit-content;
+    width: 100%;
+}
+
+.phoneNumberWrapper , .passwordWrapper , .genderWrapper , .ageWrapper , .userIdWrapper{
+    height: fit-content;
+    width: 100%;
+}
+
+.form_box input{
+    border: 1px solid black;
+    color: black;
+    border-radius: 10px;
+    height: 5%;
+    width: 100%;
+    text-decoration: none;
+    background-color: transparent;
+    padding: 2vw 1vw;
+    margin-top: .5vw;
+}
+
+.genderWrapper {
+  font-family: Poppins, sans-serif;
+  color: #333;
+  margin: 20px 0;
+}
+
+.genderWrapper p {
+  font-size: 16px;
+  font-weight: 500;
+  margin-bottom: 10px;
+}
+
+.genderOptions {
+  display: flex;
+  gap: 20px;
+}
+
+.genderOptions label {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 6px;
+  cursor: pointer;
+  font-size: 15px;
+}
+
+.genderOptions input[type="radio"] {
+  accent-color: #000000;
+  width: 16px;
+  height: 16px;
+  cursor: pointer;
+}
+
+.signUpSubmitBtn , .logInSubmitBtn , .forgotPassSubmitBtn{
+    border: none;
+    color: black;
+    padding: 1vw 15vw;
+    background-color: grey;
+    border-radius: 30px;
+    margin-top: .5vw;
+    text-decoration: none; /* Added for <a> tag */
+    display: inline-block
+}
+
+.signUpSubmitBtn.disabled , .logInSubmitBtn.disabled{
+    cursor: not-allowed;
+    pointer-events: none; /* Prevents click events */
+    background-color: grey;
+}
+
+.error-message {
+    color: red;
+    font-size: 0.8em;
+    /* margin-top: 5px; */
+}
+
+.error {
+    border: 2px solid red;
+}
+
+.description{
+    background-color: transparent;
+    width: 100%;
+    border-radius: 15px;
+    border: 1px solid black;
+    height: 8vw;
+    margin-top: 1vw;
+    padding: .5vw;
+}
+
+.description::-webkit-scrollbar{
+    display: none;
 }
