--- a/dashboard.css
+++ b/dashboard.css
@@ -432,18 +432,26 @@ main {
     font-size: .9vw;
     font-weight: 600;
     color: #489FCD;
+    cursor: pointer; /* Added cursor */
 }
 
+/* --- THIS IS THE CSS FIX ---
+  This rule will now create the 2x2 grid.
+*/
 .savingsLeftDown{
     height: 90%;
     width: 100%;    
-    /* background-color: rebeccapurple; */
     padding: .3vw;
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    /* --- These two lines create the 2x2 grid --- */
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
     gap: .5vw;
+    /* align-content: flex-start; */ /* (No longer needed with grid) */
+    /* background-color: rebeccapurple; */ /* (Removed for production) */
 }
-
+/* These rules are no longer needed */
+/*
 .savingsLeftDownTop , .savingsLeftDownBottom{
     height: 50%;
     width: 100%;
@@ -451,10 +459,12 @@ main {
     align-items: center;
     justify-content: space-between;
 }
+*/
 
+/* This rule styles the dynamic cards */
 .savingBoxes{
-    height: 100%;
-    width: 49%;
+    /* height: 49%; */  /* <-- REMOVE THIS */
+    /* width: 49%; */   /* <-- REMOVE THIS */
     background-color: white;
     border-radius: 13px;
     overflow: hidden;
@@ -463,6 +473,10 @@ main {
     gap: 1vw;
     padding: .5vw;
     cursor: pointer;
+    
+    /* You can optionally add these to be explicit, but it should work without them */
+    width: 100%;
+    height: 100%;
 }
 
 .savingBoxesContent{
@@ -502,20 +516,9 @@ main {
 
 .progress{
     height: 100%;
-    width: 50%;
-    background-color: #E0533D;
-}
-
-.savingBoxes2 .progress{
-    background-color: #E78C9D;
-}
-
-.savingBoxes3 .progress{
-    background-color: #EED868;
-}
-
-.savingBoxes4 .progress{
-    background-color: #377CC8;
+    /* width is set by inline style */
+    /* background-color is set by inline style */
+    border-radius: 15px;
 }
 
 .savingsLeftUp , .savingsLeftDown{
